--- a/contact.html
+++ b/contact.html
@@ -30,10 +30,10 @@
                     <div class="sudhakar-logo-container">
                         <div class="sudhakar-logo-flip">
                             <div class="sudhakar-logo-front">
-                                <img src="images/sudhakar_logo.png" alt="Sudhakar Logo" class="logo">
+                                <img src="images/sudhakar_logo.png" alt="Sudhakar uPVC Logo" class="logo">
                             </div>
                             <div class="sudhakar-logo-back">
-                                <img src="images/sudhakar_logo.png" alt="Sudhakar Logo" class="logo">
+                                <img src="images/sudhakar_logo.png" alt="Sudhakar uPVC Logo" class="logo">
                             </div>
                         </div>
                     </div>
@@ -151,8 +151,8 @@
                             <div class="contact-icon">📧</div>
                             <div class="contact-details">
                                 <h4>Email</h4>
-                                <p>info@dimensions.com</p>
-                                <p>sales@dimensions.com</p>
+                                <p style="word-break: break-all; line-height: 1.4;"><a href="mailto:upender@dimensionsdoorsandwindowsystems.in" style="color: inherit; text-decoration: none; cursor: pointer;" onclick="window.open('mailto:upender@dimensionsdoorsandwindowsystems.in')">upender@dimensionsdoorsandwindowsystems.in</a></p>
+                                <p style="word-break: break-all; line-height: 1.4;"><a href="mailto:gangarao@dimensionsdoorsandwindowsystems.in" style="color: inherit; text-decoration: none; cursor: pointer;" onclick="window.open('mailto:gangarao@dimensionsdoorsandwindowsystems.in')">gangarao@dimensionsdoorsandwindowsystems.in</a></p>
                             </div>
                         </div>
                         
@@ -171,8 +171,7 @@
                             <div class="contact-icon">🕒</div>
                             <div class="contact-details">
                                 <h4>Business Hours</h4>
-                                <p>Monday - Friday: 9:00 AM - 6:00 PM</p>
-                                <p>Saturday: 9:00 AM - 4:00 PM</p>
+                                <p>Monday - Saturday: 9:00 AM - 6:00 PM</p>
                                 <p>Sunday: Closed</p>
                             </div>
                         </div>
@@ -253,7 +252,7 @@
                                 <img src="images/logo.jpg" alt="Dimensions Logo" class="logo">
                             </div>
                             <div class="logo-back">
-                                <img src="images/sudhakar_logo.png" alt="Sudhakar Logo" class="logo">
+                                <img src="images/sudhakar_logo.png" alt="Sudhakar uPVC Logo" class="logo">
                             </div>
                         </div>
                     </div>
@@ -273,17 +272,10 @@
                         <h4>Contact Info</h4>
                         <p>📞 +91 9390115722</p>
                         <p>📞 +91 9390115723</p>
-                        <p>📧 info@dimensions.com</p>
+                        <p style="word-break: break-all; line-height: 1.4;">📧 <a href="mailto:upender@dimensionsdoorsandwindowsystems.in" style="color: inherit; text-decoration: none; cursor: pointer;" onclick="window.open('mailto:upender@dimensionsdoorsandwindowsystems.in')">upender@dimensionsdoorsandwindowsystems.in</a></p>
                         <p>📍 Plot No. 559, Sri Ramana Colony, Phase 2, Hastinapuram, L.B Nagar, Hyderabad-500079</p>
                     </div>
-                <div class="footer-section">
-                    <h4>Newsletter</h4>
-                    <p>Stay updated with latest news and offers!</p>
-                    <form class="newsletter-form">
-                        <input type="email" placeholder="Enter your email" required>
-                        <button type="submit" class="btn btn-primary">Subscribe</button>
-                    </form>
-                </div>
+
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Dimensions Doors and Windows Systems. All Rights Reserved. | <a href="https://www.yuvisoft.in" target="_blank" style="color: var(--secondary-color); text-decoration: none;">Yuvisoft</a></p>
