--- a/products.html
+++ b/products.html
@@ -30,10 +30,10 @@
                     <div class="sudhakar-logo-container">
                         <div class="sudhakar-logo-flip">
                             <div class="sudhakar-logo-front">
-                                <img src="images/sudhakar_logo.png" alt="Sudhakar Logo" class="logo">
+                                <img src="images/sudhakar_logo.png" alt="Sudhakar uPVC Logo" class="logo">
                             </div>
                             <div class="sudhakar-logo-back">
-                                <img src="images/sudhakar_logo.png" alt="Sudhakar Logo" class="logo">
+                                <img src="images/sudhakar_logo.png" alt="Sudhakar uPVC Logo" class="logo">
                             </div>
                         </div>
                     </div>
@@ -807,8 +807,8 @@
             <div class="product-details-content">
                 <h2 class="product-details-title">Stylish and Durable uPVC Windows and Doors</h2>
                 <div class="product-details-text">
-                    <p>Your search for trendy and durable solutions that perfectly blend functionality with aesthetics ends here. Sudhakar Group brings you premium uPVC windows and doors to upgrade the beauty of your space.</p>
-                    <p>The beauty of these uPVC windows and doors makes them a perfect choice for homes and offices, either when upgrading or when constructing. These uPVC windows and doors from Sudhakar will help to add attractiveness to your interiors and exteriors, making them more stylish and budget-friendly while providing excellent thermal insulation, soundproofing, and durability for modern living.</p>
+                                            <p>Your search for trendy and durable solutions that perfectly blend functionality with aesthetics ends here. Sudhakar uPVC Group brings you premium uPVC windows and doors to upgrade the beauty of your space.</p>
+                                            <p>The beauty of these uPVC windows and doors makes them a perfect choice for homes and offices, either when upgrading or when constructing. These uPVC windows and doors from Sudhakar uPVC will help to add attractiveness to your interiors and exteriors, making them more stylish and budget-friendly while providing excellent thermal insulation, soundproofing, and durability for modern living.</p>
                 </div>
             </div>
         </div>
@@ -1078,7 +1078,7 @@
                                 <img src="images/logo.jpg" alt="Dimensions Logo" class="logo">
                             </div>
                             <div class="logo-back">
-                                <img src="images/sudhakar_logo.png" alt="Sudhakar Logo" class="logo">
+                                <img src="images/sudhakar_logo.png" alt="Sudhakar uPVC Logo" class="logo">
                             </div>
                         </div>
                     </div>
@@ -1098,17 +1098,10 @@
                         <h4>Contact Info</h4>
                         <p>📞 +91 9390115722</p>
                         <p>📞 +91 9390115723</p>
-                        <p>📧 info@dimensions.com</p>
+                        <p style="word-break: break-all; line-height: 1.4;">📧 <a href="mailto:upender@dimensionsdoorsandwindowsystems.in" style="color: inherit; text-decoration: none; cursor: pointer;" onclick="window.open('mailto:upender@dimensionsdoorsandwindowsystems.in')">upender@dimensionsdoorsandwindowsystems.in</a></p>
                         <p>📍 Plot No. 559, Sri Ramana Colony, Phase 2, Hastinapuram, L.B Nagar, Hyderabad-500079</p>
                     </div>
-                <div class="footer-section">
-                    <h4>Newsletter</h4>
-                    <p>Stay updated with latest news and offers!</p>
-                    <form class="newsletter-form">
-                        <input type="email" placeholder="Enter your email" required>
-                        <button type="submit" class="btn btn-primary">Subscribe</button>
-                    </form>
-                </div>
+
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Dimensions Doors and Windows Systems. All Rights Reserved. | <a href="https://www.yuvisoft.in" target="_blank" style="color: var(--secondary-color); text-decoration: none;">Yuvisoft</a></p>
